Start correcting manuscript. Title.

--- a/paper.tex
+++ b/paper.tex
@@ -19,27 +19,28 @@
 \newcommand{\notaV}[1]{{\color{red}+V:#1+}}
 
 
-\title{\textbf{Optimization of Porous Silicon Gradient Refractive
-    Index Structures. \notaV{Index Structures (NOTE: WE NEED TO CHANGE THE NAME;
-    Probably "Analytical model for  porous silicon structures with 1D gradient refractive index"}} }
+\title{Model for Porous Silicon Structures with a Lateral Gradient}
 \author[1]{C. A. Ospina de la Cruz}
-\author[2]{W. L. Mochán }
-\author[3]{V. Agarwal }
+\author[2]{V. Agarwal}
+\author[3]{W. L. Mochán}
 
 \affil[1]{Posgrado en Ingenier\'ia y Ciencias Aplicadas del Centro de
   Investigación en Ingenier\'ia y Ciencias Aplicadas (CIICAp-IICBA),
   Universidad Autónoma del Estado de Morelos (UAEM), Cuernavaca CP
   62209, México}
-\affil[2]{Instituto de Ciencias F\'isica ,Universidad Nacional
-  Autonoma de Mexico, Av. Universidad S/N, Col. Chamilpa, 62210
-  Cuernavaca, Morelos, Mexico}
-\affil[3]{Centro de Investigaci\'on en Ingenier\'ia y Ciencias
+\affil[2]{Centro de Investigaci\'on en Ingenier\'ia y Ciencias
   Aplicadas,Universidad del Estado de Morelos, Av. Universidad 1001
   Col. Chamilpa, Cuernavaca, Morelos 62209, Mexico  }
+\affil[3]{Instituto de Ciencias F\'isica ,Universidad Nacional
+  Autonoma de Mexico, Av. Universidad S/N, Col. Chamilpa, 62210
+  Cuernavaca, Morelos, Mexico}
 \begin{document}
 
 \maketitle
-
+\notaV{Index Structures (NOTE: WE NEED TO CHANGE THE NAME;
+  Probably "Analytical model for  porous silicon structures with 1D
+  gradient refractive index)}
+\notaL{The calculation is 2D, seems 1D due to the narrow geometry chosen.}
 \begin{abstract}
 We propose a simple setup which that the calculation of the current
 density as a function of position within an electrochemical cell used
