--- a/paper.tex
+++ b/paper.tex
@@ -42,7 +42,7 @@
   gradient refractive index)}
 \notaL{The calculation is 2D, seems 1D due to the narrow geometry chosen.}
 \begin{abstract}
-We propose a simple setup which that the calculation of the current
+  We propose a simple setup with which that the calculation of the current
 density as a function of position within an electrochemical cell used
 to produce porous Silicon structures with a controlled gradient in their
 index of refraction. We produced samples under several conditions and
@@ -120,6 +120,7 @@ fast and easy approach with an additional advantage of being compatible
 with VLSI devices and integrable with microelectronics, for the fabrication
 of refractive index (pore size) gradient has been the development of asymmetric
 electrode configuration in the electrochemical synthesis of porous silicon \cite{sailor2012porous}.
+
 Although porous silicon initially stimulated the interest of the scientific
 community due to visible PL at room temperature, presently it has
 been accepted as a multifaceted optical material due to its large surface
@@ -170,7 +171,8 @@ optical elements from PS \cite{ocier2017tunable}.
 Kruger et al showed the \cite{krueger2016porous}
 %the ...  [ Krueger, Neil A., et al. "Porous silicon gradient
 %refractive index micro-optics." Nano letters 16.12 (2016): 7402-7407.]
-In addition the same group \cite{krueger2018electrochemical}
+In addition the same group \cite{krueger2018electrochemical} used porous silicon 1D GRIN structure infiltrated with polymer to synthesize flat microns arrays.
+
 %[Krueger, Neil A., et al.
 % "Electrochemical Fabrication of Flat, Polymer‐Embedded
 %Porous Silicon 1D Gradient Refractive Index Microlens
@@ -262,7 +264,7 @@ A gradient in the optical properties of porous Silicon (PS) systems may be
 obtained by electrochemically attacking a Si surface with a position dependent current
 density ${\bm j(\bm r)}$, as the porosity and refractive index depend on
 the current density, as well as the etching rate and the thickness of the
-porous layer. Nevertheless, it is not a simple task to measure the
+porous layer. Nevertheless, it is challeging to measure the
 {\em local} value of $\bm j(\bm r)$ along the surface. This hampers the
 design and optimization of well characterized reproducible GRIN PS
 structures.\notaL{Tenemos referencias para afirmar esto?} Thus, we
@@ -438,7 +440,7 @@ lattice with a unit cell of size $2a\times 4c$ containing a basis of eight point
 charges, four positive and four negative. A projection onto the $yz$
 plane would similarly yield a rectangular lattice with a  $2b\times4c$
 unit cell. Putting everything together, the problem is that of solving
-Poisson's equation within an orthothombic lattice of size
+Poisson's equation within an orthorhombic lattice of size
 $2a\times2b\times4c$ with a basis of 16 point charges of charge $\pm
 q_0$ arranged in positive and negative planes.
 
@@ -617,7 +619,8 @@ In Fig. \ref{fig:DE1} we show a schematic representation of our
 experimental setup to manufacture GRIN PS structures.
 As dicussed above, we fabricated an electrolytic cell with the shape of a
 rectangular prism on the bottom of which we place a Si wafer which makes
-electrical contact to a brass \notaC{ laton. gold plate}
+electrical contact to a brass \notaC{ laton. gold plate}\notaL{Porqué
+  vivechna dice silver/copper?}
 \notaL{Lo inventé; de qué material es
   el contacto bajo la muestra?} which together make the anode. The
 cathode consists of a platinum wire insulated except for a small region
@@ -626,10 +629,10 @@ We also show a schematic drawing of the expected GRIN PS structures,
 with a gradient in the porosity, and in the thickness, density and depth
 of the resulting pores.
 
-\subsection{Fabrication of GRIN  PS Single Layers}
+\subsection{Fabrication of PS  GRIN Single Layers}
 \label{sec:fabrication-ps-grin}
-We manufactured single layer PS structures through electrochemical
-anodization of a (100) $p$-type crystalline Si wafer
+Single layer PS structures were fabricated through electrochemical
+anodization of (100) oriented $p$-type crystalline Si wafer
 (resistivity 0.002 - 0.005 $ \Omega\,\text{cm}$), under galvanostatic
 conditions. The process was performed at
 \notaC{room temperature, no controle latempertaura}
@@ -645,8 +648,9 @@ sides $a=2.01\,\text{cm}$ \notaL{Cambié el número, de acuerdo a unas
   mediciones de Cristian} and $b=1.48\,\text{cm}$, with an uncovered sample area
 of about $3\,\text{cm}^2$. The height of the liquid was set at
 $c=1\,\text{cm}$. The cathode was a
-platinum wire that with a diameter of $0.41\,\text{mm}$ insulated by a
-teflon cylinder of external diameter $\,2\text{mm}$, with an uncovered
+platinum wire that with a diameter of $0.41\,\text{mm}$ insulated with
+teflon tape \notaL{Según Vivechna esto es falso: by a
+teflon cylinder of external diameter $\,2\text{mm}$}, with an uncovered
 tip located at $\bm r_0=(x_0,
 y_0,z_0)=(0.2\,\text{cm},0.74\,\text{cm},0.9\,\text{cm})$. \notaL{Checa todos estos datos}
 We manufactured three samples $G_1$, $G_2$ and $G_3$ by applying a
