--- a/paper.tex
+++ b/paper.tex
@@ -42,48 +42,34 @@
   gradient refractive index)}
 \notaL{The calculation is 2D, seems 1D due to the narrow geometry chosen.}
 \begin{abstract}
-  We propose a simple setup with which that the calculation of the current
-density as a function of position within an electrochemical cell used
-to produce porous Silicon structures with a controlled gradient in their
-index of refraction. We produced samples under several conditions and
-characterized them with scanning electron microscopy, and
-ultraviolet-visible-near infrared reflectance spectroscopy. Our
-results allow us to obtain from experiments on a single or just a few
-samples a full characterization of the dependence of porosity,
-dielectric function and speed of attack on the current density and on
-position, so that novel nonhomogeneous devices may be designed and
-built.
-\notaV{ABSTRACT :  Surfaces with the gradient in the refractive index
-have attracted attention due to their ability to unpair the relation
- between the shape of the optical lens with its optical response.
-  For enhancing the versatility  of electrochemical gradients and its possible usage in
-different kinds of devices and applications, it is
-desirable to predesign GRIN structures with spatial
-predictability of porosity and the corresponding etching rate.
-In this work, we propose a simple model for the calculation of the current
-density as a function of position within an electrochemical cell used
-to produce porous silicon structures with a controlled gradient in their
-index of refraction. The characterization of some typical PS samples with
-lateral porosity and thickness gradient (produced using pin Pt electrode)
-with scanning electron microscopy and
-ultraviolet-visible-near infrared reflectance spectroscopy was
-found to be in conformity with the properties predicted through
-the proposed model. In addition,
-as the results allow us to obtain the complete dependence of
-porosity, dielectric function and the corresponding etching rate for each
-current density from some measurements performed on a single or
-a couple of samples, the proposed model can facilitate the designing
-of novel sensing devices based on surfaces with lateral gradient in refractive indices.}
+
+Layered systems with a lateral gradient in their refractive indices
+and thicknesses may be employed for the development of a variety of
+optical devices and
+applications. They may be fabricated of porous silicon (PS) through a
+position dependent electrochemical process. Thus, the possibility of
+predicting the local current density $j$ and the co rresponding
+porosity $p$
+and etching rate $v$ would be desirable for a systematic design of these
+structures. In this work, we propose a
+simple model for the calculation of $j$
+as a function of position within an electrochemical cell. We prepared
+some graded single layer PS samples, measured their optical properties with
+ultraviolet-visible-near infrared reflectance
+spectroscopy, \notaL{Should we mention microscopy?}, and related them
+to their local porosity and thickness which, together with our model, were then used to obtain
+the $p$ vs. $j$ and $v$ vs. $j$ calibration curves. We corroborated
+our model by comparing the calibration curves for different samples. Thus, from
+measurements on only one, or a few simple systems, we may obtain full
+calibration curves which may be used to predict, design, and fabricate
+more complex novel nonhomogenous devices with lateral gradients which can be used
+for manifold applications.
+
 Keywords: Porous Silicon; GRIN; Reflectance Spectra.
 \end{abstract}
-\notaL{Cambié el abstract, pero habrá que revisarlo después.}
-
 
 \section{Introduction}
 \label{sec:introduction}
-\notaV{
-Introduction
-
 Surfaces with gradient in the refractive index (GRIN) are of
 importance not only due to the possibility of being able to
 engineer/tune the propagation of light within the structure’s
@@ -204,7 +190,7 @@ Section 4 includes experimental results and its comparison with numerically
 evaluated parameters. Finally,  the conclusions are given in Section 5
 %$
 %
-}
+
 
 %\notaV{ $Painting a rainbow on silicon - A simple method to  generate a porous silicon
 %band filter gradient. / Li, Yang Yang; Kim, Peter; Sailor, Michael J.
