--- a/paper.tex
+++ b/paper.tex
@@ -43,18 +43,16 @@
 \notaL{The calculation is 2D, seems 1D due to the narrow geometry chosen.}
 \begin{abstract}
 
-Layered systems with a lateral gradient in their refractive indices
-and thicknesses may be employed for the development of a variety of
-optical devices and
-applications. They may be fabricated of porous silicon (PS) through a
-position dependent electrochemical process. Thus, the possibility of
-predicting the local current density $j$ and the co rresponding
-porosity $p$
-and etching rate $v$ would be desirable for a systematic design of these
+A variety of optical devices and applications may be based on layered
+systems which have a lateral gradient in both their refractive indices
+and their thicknesses. They may be fabricated of porous silicon (PS) through an
+electrochemical process in which the etching current depends on position. Thus, the possibility of
+predicting the local current density $j$ and the corresponding
+porosity $p$ and etching rate $v$ would be desirable for a systematic design of these
 structures. In this work, we propose a
 simple model for the calculation of $j$
 as a function of position within an electrochemical cell. We prepared
-some graded single layer PS samples, measured their optical properties with
+some graded single layer PS samples, measured their optical properties through
 ultraviolet-visible-near infrared reflectance
 spectroscopy, \notaL{Should we mention microscopy?}, and related them
 to their local porosity and thickness which, together with our model, were then used to obtain
