revise start of introduction

--- a/paper.tex
+++ b/paper.tex
@@ -68,42 +68,40 @@ Keywords: Porous Silicon; GRIN; Reflectance Spectra.
 
 \section{Introduction}
 \label{sec:introduction}
-Surfaces with gradient in the refractive index (GRIN) are of
-importance not only due to the possibility of being able to
-engineer/tune the propagation of light within the structure’s
-surface for applications such as flat lenses, but also for several
-interesting biological applications where the continual topographical
-variation is being exploited \cite{pierscionek2012gradient}. As an example,
-roughness dependent  response of the cells has been tested on such
-materials for applications in medical implants \cite{bai2020bioinspired}.
- Gradients have also been employed for several
+Surfaces with a gradient in the refractive index (GRIN) are of
+importance as they allow the engineering and tuning of the optical
+phase along their surface, yielding applications such as flat
+lenses. Furtheremore, there are important biological applications
+which combine topographical features with index of refraction
+gradients \cite{pierscionek2012gradient}. Preparation of structures
+with gradients in other properties have also shown their
+usefulness. \notaL{I believe the examples below are unrelated to GRIN,
+  thats why I added this remark.} As an example, the
+roughness dependent  response of cells has been tested on
+materials used applications in medical implants
+\cite{bai2020bioinspired}.
+Gradients have also been employed for several
 technological applications such as high-yield screening of catalysts,
 sensing materials and biomolecules \cite{maier2007combinatorial, jayaraman2004construction,
 potyrailo2008combinatorial}
-%[W. F. Maier, K. Stçwe, S. Sieg, Angew.
-%Chem. 2007, 119, 6122; Angew. Chem. Int. Ed. 2007, 46, 6016. ;  S. Jayaraman,
-%A. C. Hillier, J. Comb. Chem. 2004, 6, 27; S. Jayaraman, A. C. Hillier, Meas.
-%Sci. Technol. 2005, 16, 5. ; R. A. Potyrailo, V. M. Mirsky, Chem. Rev. 2008, 108, 770.]
-%%
 Apart from some methods developed by S.E. Fosdick et al \cite{fosdick2010two},
 %[JACS  2010, 132, 9226-9227],
-synthesis of  Ag-Au alloy gradients on steel and chemical composition gradients of CdS
-on gold electrode have been made by Shannon’s group\cite{wang2019fabrication}.
-Among the electrochemical methods, compositional and doping density changes
-in the conducting polymer have been used to produce the gradients using Indium tin
-oxide electrode \cite{inagi2010bipolar}
-%[S. Inagi, Y. Ishiguro et al Angew Chem Int. Ed. 2010, 49, 10136-10139;
-%Angew Chem 2010 122, 10334-10337].
+synthesis of  Ag-Au alloy gradients on steel and chemical composition
+gradients of CdS layers
+on gold electrodes have been obtained made by Shannon’s
+group\cite{wang2019fabrication}. \notaL{Is this Shannon a big shot, or
+  why should we name him?}
+Among electrochemical methods, compositional and doping density changes
+in  conducting polymers have been used to produce gradients using Indium Tin
+Oxide electrodes \cite{inagi2010bipolar}
 Electrochemically induced potential gradients have been shown to catalyze the
-reactions and gradient doping of the polymers \cite{qin2020bipolar, ishiguro2011gradient}
-%[Gradient Doping of Conducting Polymer
-%Films by Means of Bipolar Electrochemistry Y. Ishiguro, S. Inagi, and T.Fuchigami
-%Langmuir 2011 27 (11), 7158-7162].   (PENDING : few MORE EXAMPLES from last couple of years)
+reactions and gradient doping of polymers \cite{qin2020bipolar, ishiguro2011gradient}.
 As compared to the above mentioned techniques, a relatively economical,
-fast and easy approach with an additional advantage of being compatible
-with VLSI devices and integrable with microelectronics, for the fabrication
-of refractive index (pore size) gradient has been the development of asymmetric
-electrode configuration in the electrochemical synthesis of porous silicon \cite{sailor2012porous}.
+fast and easy approach for the fabrication
+of gradient materials has been the use  of asymmetrical
+electrode configurations in the electrochemical synthesis of porous silicon \cite{sailor2012porous}.
+This technique has the additional advantage of being compatible
+with VLSI devices and integrable with microelectronics.
 
 Although porous silicon initially stimulated the interest of the scientific
 community due to visible PL at room temperature, presently it has
