Review introduction to the end

--- a/paper.tex
+++ b/paper.tex
@@ -76,7 +76,7 @@ which combine topographical features with index of refraction
 gradients \cite{pierscionek2012gradient}. Preparation of structures
 with gradients in other properties have also shown their
 usefulness. \notaL{I believe the examples below are unrelated to GRIN,
-  thats why I added this remark.} As an example, the
+  thats why I added the previous remark.} As an example, the
 roughness dependent  response of cells has been tested on
 materials used applications in medical implants
 \cite{bai2020bioinspired}.
@@ -103,139 +103,88 @@ electrode configurations in the electrochemical synthesis of porous silicon \cit
 This technique has the additional advantage of being compatible
 with VLSI devices and integrable with microelectronics.
 
-Although porous silicon initially stimulated the interest of the scientific
-community due to visible PL at room temperature, presently it has
-been accepted as a multifaceted optical material due to its large surface
+Although porous silicon (PS) initially stimulated the interest of the scientific
+community due to its photoluminiscence in the visible range at room
+temperature, it has presently
+been recognized as a multifaceted optical material due to its large surface
 area, biocompatibility, ease of fabrication and tunable refractive index.
-Porous silicon emanating applications now cover various fields such as
-chemical and biosensor \cite{kumar2020porous},
-%[Porous Silicon Fabry–Pérot Interferometer for
-%N-Acetyl-β-d-Glucosaminidase Biomarker Monitoring  D. Nanda Kumar,
-%Nofar Pinker, and Giorgi Shtenberg  ACS Sensors 2020 5 (7), 1969-1976; DOI:
-%10.1021/acssensors.0c00348],
+Applications based on porous silicon now cover various fields such as
+chemical sensors and biosensors \cite{kumar2020porous},
 microelectronics and MEMS \cite{martinez2016dual},as well as a
 range of optical \cite{estevez2014porous} and optoelectronic applications
 \cite{ramadan2020fabrication}. Specifically,
-the temporal variation of current density results in the variation of
-porosity along the depth for the easy fabrication of different kinds
-\cite{perez2018reflectivity} of 1D photonics crystals.
-Although the conventional fabrication of PS requires laterally
-homogeneous samples (with same structural characteristics on the
-porous surface), asymmetric configuration to produce porous silicon
-with a lateral gradient (in terms of optical thickness/ pore size and thickness
-of the porous layer) has also been exploited for different applications
-\cite{collins2002determining}. In this configuration, a small platinum electrode (cathode)
-is positioned perpendicular  to the surface of the Si substrate (anode)
-at one end or the center  of the cell, resulting  in a decrease in current
-density  with an increase in the distance from the electrode
+the temporal variation of the current density results in a variation of
+porosity along the depth, allowing the easy fabrication of different kinds
+\cite{perez2018reflectivity} of 1D photonics crystals and other
+structures. \notaL{Photonic crystals only in the periodic case.}
+Although the conventional fabrication of PS yields laterally
+homogeneous samples, with invariant structural and optical properties
+along the surface, an asymmetric configuration \notaL{Is it clear what
+  is asymmetric?} may produce porous
+Silicon structures with a lateral gradient in properties such as
+thickness, pore size and density, and thus, refractive index and
+optical thickness. In this configuration, a small platinum electrode (cathode)
+is positioned perpendicular  to the surface of a Si substrate (anode)
+near one end \notaL{ At the center wouldn't be asymmetric: or the
+  center} of the cell, resulting  in a current
+density  which decreases as the distance to the electrode increases
  \cite{khung2008using, clements2011mesenchymal}.
 The resulting porous surface can have pore sizes ranging from a few nanometers
 to  few micrometers  \cite{wang2015screening}. The range of the dimensions of the pores and
-the corresponding  thickness obtained on the same chip can be controlled by
-adjusting the location of the pin/circular electrode,  anodizing current density
-and etching time period for a given silicon wafer.   Sailor Group
-in 2002 \cite{collins2002determining, sailor2012porous} applied it
+the corresponding  thickness range on the same chip can be controlled by
+adjusting the location of the electrode, the  anodizing current
+and the etching time. Different
+applications have been found for the resulting structures
+\cite{collins2002determining}. For example, Sailor's group
+\cite{collins2002determining, sailor2012porous} applied it
 for the determination of protein size.
-Additionally, due to the biocompatible nature of PS, possible gating of
-the optical response by variation in pH of the solution was shown to
-trap/release the biomolecule for possible drug delivery applications.
- Similar asymmetric electrode configuration was used to fabricate
- optical filters (multilayered structures) with lateral gradient \cite{li2005painting}
-% [Li, Yang Yang, Peter Kim, and Michael J. Sailor.
-% "Painting a rainbow on silicon–a simple method to
-% generate a porous silicon band filter gradient.
-% " physica status solidi (a) 202.8 (2005): 1616-1618.]
-for developing ethanol sensor (Sailor 2012)\cite{sailor2012porous}.
- Additionally it has been shown that the combination of thermal  oxidation  and
- infiltration of TiO2  by ALD offers the  opportunity to manufacture
-a high refractive indices contrast in visibly transparent GRIN
-optical elements from PS \cite{ocier2017tunable}.
-Kruger et al showed the \cite{krueger2016porous}
-%the ...  [ Krueger, Neil A., et al. "Porous silicon gradient
-%refractive index micro-optics." Nano letters 16.12 (2016): 7402-7407.]
-In addition the same group \cite{krueger2018electrochemical} used porous silicon 1D GRIN structure infiltrated with polymer to synthesize flat microns arrays.
-
-%[Krueger, Neil A., et al.
-% "Electrochemical Fabrication of Flat, Polymer‐Embedded
-%Porous Silicon 1D Gradient Refractive Index Microlens
-%Arrays." physica status solidi (a) 215.13 (2018): 1800088].
+Additionally, gating of
+the optical response through a variation in pH of the solution was shown to
+trap/release biomolecules for possible drug delivery
+applications, given the biocompatible nature of PS, . \notaL{How is this related to the gradient?}
+A similar asymmetric electrode configuration was used to fabricate
+multilayered optical filters with lateral a gradient
+\cite{li2005painting} and
+for developing ethanol sensors \cite{sailor2012porous}.
+Additionally it has been shown that the combination of thermal  oxidation  and
+infiltration of TiO2  by ALD \notaL{What is this acronym?} allows the manufacture
+of transparent GRIN
+optical elements with a high refractive index contrast \cite{ocier2017tunable}.
+Kruger et al. showed the \cite{krueger2016porous} \notaL{What did
+  Kruger show?}
+Furthermore, the same group \cite{krueger2018electrochemical} used
+a porous silicon 1D GRIN structure infiltrated with polymer to
+synthesize flat microlens arrays.
 Recently, J Wang et al. has shown the fabrication of
-miniature spectrometer with PS based rugate filter using
+a miniature spectrometer with PS based rugate filter using a
 radial interfacial potential distribution \cite{wang2019fabrication}
-%(Wang, Joanna,
-%Michael J. Sailor, and Byoung‐Yong Chang. "Fabrication of a lateral
-%gradient rugate in porous silicon for a miniature spectrometer
-%application." ChemElectroChem 6.24 (2019): 5967-5972.
 On the other hand, the effect of different topographical
 features present on the same chip, has also been
-used to culture / adhesion of certain cells \cite{khung2008using}
-In the investigation of such practically applicable systems,
-the spacial predictability of electrochemical gradients can
-be useful for predesigning the devices for different applications.
+used to study the dependence of the adhesion of certain cells on the
+surface topography \cite{khung2008using}.
+
+For applications such as those mentioned above,
+it would be very useful to be able to predict beforehand the spatially dependent
+properties of the resulting structures. This would allow the design
+and optimization of the desired devices.
 In this work, we report a simple analytical model to quantitatively
-analyze the gradient (calculate the porosity /current density and
-thickness) at any point of the GRIN structure.  The paper is organized
-as follows. In Section 2  we report a simple analytical model to calculate
-the current density/porosity and thickness  at any point of the GRIN structure.
-The model contemplates (Dr. Mochan) the formation of electrochemically generated
-porous surface  (applicable/extendible to photonic crystals with lateral gradient)
-with lateral gradient in refractive index  ...with predictable  depth and porosity
-at any point on surface.   In Section 3 we provide experimental details for the
+analyze the spatial dependence of the current density during the
+electrochemical on Si to produce PS structures. A calibration
+procedure may then relate the current density to the porosity and the
+etching rate. Thus, for a given etching current acting over a given
+time, we may predict the position dependence of the index of
+refraction and optical thickness of the resulting inhomogeneous
+layer, thus allowing the prediction of the optical properties of
+multilayered GRIN structure. The structure of the paper is the
+following.
+\notaL{Check when finished}. In Section \ref{sec:theory} we develop a
+simple analytical model to calculate
+the current density at any point over the GRIN structure under preparaton.
+In Section \ref{sec:procedures} we provide experimental details for the
 synthesis of porous silicon samples with lateral refractive index gradient.
-Section 4 includes experimental results and its comparison with numerically
-evaluated parameters. Finally,  the conclusions are given in Section 5
-%$
-%
-
-
-%\notaV{ $Painting a rainbow on silicon - A simple method to  generate a porous silicon
-%band filter gradient. / Li, Yang Yang; Kim, Peter; Sailor, Michael J.
-%In: Physica Status Solidi (A) Applications and Materials Science,
-%Vol. 202, No. 8, 06.2005, p. 1616-1618.  (https://doi.org/10.1002/pssa.200461200)
-%
-%Electrochemical Preparation of Pore Wall Modification Gradients
-%across Thin Porous Silicon Layers
-%Corrina M. Thompson, Michel Nieuwoudt, Anne M. Ruminski,
-%Michael J. Sailor, and Gordon M. Miskelly
-%Langmuir 2010 26 (10), 7598-7603
-%DOI: 10.1021/la904408h
-%
-% Richardson, Kathleen A., et al. "Advances in infrared gradient
-% refractive index (GRIN) materials: a review." Optical Engineering 59.11 (2020): 112602.
-%
-%
-%Lavanant, Enora, et al. "Radial gradient refractive index
-%(GRIN) infrared lens based on spatially resolved crystallization
-%of chalcogenide glass." Optical Materials Express 10.4 (2020): 860-867.
-%While widely used in the visible, radial gradient refractive
-%index (GRIN) lenses are still elusive in the IR waveband.
-%In this paper we introduce a new method based on spatially
-%resolved crystallization of chalcogenide glass to produce such lenses.
-%Optical and structural
-%
-%Yoon, Sun Mi, et al. "Subwavelength Hollow-Nanopillared Glass
-%with Gradient Refractive Index for Ultralow Diffuse Reflectance
-%and Antifogging." ACS applied materials & interfaces 12.5 (2020): 6234-6242.
-%Nanostructured glass with subwavelength hollow nanopillars
-%of diameters of sub-65 nm was fabricated, showing high optical
-%transmittance and ultralow diffuse reflectance. A simple
-%process involving single-step plasma etching was used on a
-%glass slide coated with a SiO2...
-%
-%Perez, Julius C., Tahmid H. Talukdar, and Judson D. Ryckman.
-%"Patterning Refractive Index on the Surface of a Chip by Direct
-%Nanoimprinting." CLEO: QELS_Fundamental Science. Optical Society of America, 2020.
-%
-%Szymanowski, Hieronim, et al. "Thin SiNC/SiOC Coatings with a
-%Gradient of Refractive Index Deposited from Organosilicon Precursor." Coatings 10.8 (2020): 794.
-%
-%Perez, Julius C., Tahmid H. Talukdar, and Judson D. Ryckman.
-% "Patterning Refractive Index on the Surface of a Chip by Direct
-% Nanoimprinting." CLEO: QELS_Fundamental Science. Optical Society of America, 2020.
-% $
-%}
-
-
+Section \ref{sec:discussion-results} includes experimental results and
+its comparison with numerically evaluated parameters. Finally, we
+devote Section \ref{sec:conclusions} to our concusions.
 
 
 \section{Theory: current density}
@@ -351,7 +300,7 @@ E_x(0, y ,z)= E_x(a, y ,z)=E_y(x, 0 ,z)=E_y(x, b
 ,z)=E_z(x, y ,c)=0.
 \end{equation}
 Here, $\delta^{(D)}$ is Dirac's delta function in $D$ dimensions.
-This problem may be solved readily using image charge theory \cite{jackson1999classical}.
+This problem may be solved readily using image charge theory \cite{jackson1975classical}.
 The potential within the electrolytic cell coincides
 within the region $0\le x\le a$, $0\le y \le b$, $0\le z\le c$
 with that an infinite fictitious empty space but for the point charge
@@ -980,7 +929,7 @@ non-trivial multilayered GRIN PS structures.
 
 
 \section{Conclusions}
-\label{sec:conclusion}
+\label{sec:conclusions}
 By choosing a simple geometry for our electrochemical cell, namely, a
 rectangular prism, and employing a point-like electrode, we were able
 to derive an expression for the calculation of the electric current
