Correct small mistake with extra citation.

--- a/paper.tex
+++ b/paper.tex
@@ -150,9 +150,7 @@ Additionally it has been shown that the combination of thermal  oxidation  and
 infiltration of TiO2  by ALD \notaL{What is this acronym?} allows the manufacture
 of transparent GRIN
 optical elements with a high refractive index contrast \cite{ocier2017tunable}.
-Kruger et al. showed the \cite{krueger2016porous} \notaL{What did
-  Kruger show?}
-Furthermore, the same group \cite{krueger2018electrochemical} used
+Kruger et al. \cite{krueger2018electrochemical} used
 a porous silicon 1D GRIN structure infiltrated with polymer to
 synthesize flat microlens arrays.
 Recently, J Wang et al. has shown the fabrication of
@@ -187,7 +185,7 @@ its comparison with numerically evaluated parameters. Finally, we
 devote Section \ref{sec:conclusions} to our concusions.
 
 
-\section{Theory: current density}
+\section{Theory}
 \label{sec:theory}
 \label{sec:calc-curr-dens}
 \notaL{check where acronyms are first defined}
