Add references for planewise summation

--- a/bibligrin.bib
+++ b/bibligrin.bib
@@ -47,6 +47,24 @@
   publisher={Wiley Online Library}
 }
 
+@article{de_wette1965internal,
+	title = {Internal {Field} in {General} {Dipole} {Lattices}},
+	volume = {137},
+	url = {https://link.aps.org/doi/10.1103/PhysRev.137.A78},
+	doi = {10.1103/PhysRev.137.A78},
+	abstract = {The calculation of the internal field in dipole lattices necessitates summing the contributions due to all dipoles in the crystal. These dipole sums are conditionally convergent, which means that they depend on the order of summation (i.e., the shape of the crystal). Rapidly converging expressions for these sums are obtained with the method of planewise summation, for lattices of arbitrary symmetry and arbitrary dipole orientation. With these expressions one can evaluate the internal field at an arbitrary point of complex dipole lattices. As an example, the internal electric field at the positions of the water molecules is evaluated for potassium ferrocyanide [K4Fe(CN)6·3H2O].},
+	number = {1A},
+	urldate = {2020-10-30},
+	journal = {Physical Review},
+	author = {de Wette, F. W. and Schacher, G. E.},
+	month = jan,
+	year = {1965},
+	note = {Publisher: American Physical Society},
+	pages = {A78--A91},
+	file = {APS Snapshot:/home/mochan/.mozilla/firefox/af5ppez9.default/zotero/storage/TQ7DQYYF/PhysRev.137.html:text/html;Full Text PDF:/home/mochan/.mozilla/firefox/af5ppez9.default/zotero/storage/6NW27PK2/de Wette and Schacher - 1965 - Internal Field in General Dipole Lattices.pdf:application/pdf}
+}
+
+
 @article{estevez2014porous,
   title={Porous {Silicon} Photonic Crystals},
   author={Estevez, J Octavio and Agarwal, Vivechana},
@@ -66,6 +84,21 @@
   pages={9226--9227},
   year={2010},
   publisher={ACS Publications}
+}
+
+@article{grindlay1981k,
+	title = {On the {K}-dependence of the electrical field in a crystalline slab of oscillating charges},
+	url = {https://cdnsciencepub.com/doi/abs/10.1139/p81-120},
+	doi = {10.1139/p81-120},
+	abstract = {The short range part of the electric field of a crystalline slab array of oscillating charges (a) is related to the Ewald sum and (b) can be represented by a rapidly convergent trigonometric series...},
+	language = {en},
+	urldate = {2020-10-30},
+	journal = {Canadian Journal of Physics},
+	author = {Grindlay, J.},
+	month = jul,
+	year = {1981},
+	note = {Publisher: NRC Research Press Ottawa, Canada},
+	file = {Snapshot:/home/mochan/.mozilla/firefox/af5ppez9.default/zotero/storage/YS9KB9DM/p81-120.html:text/html}
 }
 
 @article{inagi2010bipolar,
@@ -226,6 +259,42 @@
 	pages = {110012},
 }
 
+@article{nijboer1957calculation,
+	title = {On the calculation of lattice sums},
+	volume = {23},
+	issn = {0031-8914},
+	url = {http://www.sciencedirect.com/science/article/pii/S0031891457921249},
+	doi = {10.1016/S0031-8914(57)92124-9},
+	abstract = {Synopsis
+A short and straightforward method for the conversion of slowly converging lattice sums into expressions with good convergence is presented. As an illustration a well-known expression for the Madelung constant is rederived. The method is then applied to two general types of lattice sums, the latter of which has not been treated before.},
+	language = {en},
+	number = {1},
+	urldate = {2020-10-30},
+	journal = {Physica},
+	author = {Nijboer, B. R. A. and De Wette, F. W.},
+	month = jan,
+	year = {1957},
+	pages = {309--321},
+	file = {ScienceDirect Snapshot:/home/mochan/.mozilla/firefox/af5ppez9.default/zotero/storage/B6XMHG69/S0031891457921249.html:text/html;Submitted Version:/home/mochan/.mozilla/firefox/af5ppez9.default/zotero/storage/TKH78WIX/Nijboer and De Wette - 1957 - On the calculation of lattice sums.pdf:application/pdf}
+}
+
+@article{nijboer1958internal,
+	title = {The {Internal} {Field} in {Dipole} {Lattices}},
+	volume = {24},
+	issn = {0031-8914},
+	doi = {10.1016/S0031-8914(58)95803-8},
+	language = {English},
+	number = {6},
+	journal = {Physica},
+	author = {Nijboer, Bra and Dewette, Fw},
+	year = {1958},
+	note = {Place: Amsterdam
+Publisher: Elsevier Science Bv
+WOS:A1958WX86900005},
+	pages = {422--431},
+	file = {Submitted Version:/home/mochan/.mozilla/firefox/af5ppez9.default/zotero/storage/EMNGRZIZ/Nijboer and Dewette - 1958 - The Internal Field in Dipole Lattices.pdf:application/pdf}
+}
+
 @article{ocier2017tunable,
   title={Tunable Visibly Transparent Optics Derived from Porous {Silicon}},
   author={Ocier, Christian R and Krueger, Neil A and Zhou, Weijun and Braun, Paul V},
@@ -352,4 +421,22 @@
   pages={5967--5972},
   year={2019},
   publisher={Wiley Online Library}
+}
+
+@article{watson1981madelung,
+	title = {Madelung effects at crystal surfaces: {Implications} for photoemission},
+	volume = {24},
+	shorttitle = {Madelung effects at crystal surfaces},
+	url = {https://link.aps.org/doi/10.1103/PhysRevB.24.1791},
+	doi = {10.1103/PhysRevB.24.1791},
+	abstract = {An equation originally derived by Lennard-Jones and Dent for the estimation of Madelung potentials is utilized to study the properties of these potentials within the bulk and at the surfaces of crystals. It is clear from the equation that potentials at atomic sites only one lattice constant distant from the surface are, in general, indistinguishable from those in the bulk. The equation indicates also that Madelung sums in real space can be so organized as to make them more tractable computationally than they are usually considered to be. Madelung potentials for atomic sites at and near surfaces are obtained for NaCl(100), NaCl(110), CsCl(110), zinc blende (110), wurtzite (11¯20), and rutile (001).},
+	number = {4},
+	urldate = {2020-10-30},
+	journal = {Physical Review B},
+	author = {Watson, R. E. and Davenport, J. W. and Perlman, M. L. and Sham, T. K.},
+	month = aug,
+	year = {1981},
+	note = {Publisher: American Physical Society},
+	pages = {1791--1797},
+	file = {APS Snapshot:/home/mochan/.mozilla/firefox/af5ppez9.default/zotero/storage/NILERA7X/PhysRevB.24.html:text/html;Full Text PDF:/home/mochan/.mozilla/firefox/af5ppez9.default/zotero/storage/UVM75I2C/Watson et al. - 1981 - Madelung effects at crystal surfaces Implications.pdf:application/pdf}
 }
